--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,11 +1,11 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    color: #333;
+  font-family: "Roboto", sans-serif;
+  color: #333;
 }
 
 // Image parent div dee 100 orgon,
 //  proportion ondoroo awna
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
