--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,10 @@
 .large-hero {
+  border-bottom: 10px solid $mainBlue;
   position: relative;
+
+  &__image {
+    display: block;
+  }
 
   &__text-content {
     position: absolute;
@@ -34,10 +39,15 @@
 
   &__description {
     color: #fff;
-    font-size: 1.875rem;
+    font-size: 1.2rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
     max-width: 30rem;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+
+    @mixin atSmall {
+      font-size: 1.875rem;
+    }
   }
 }
