--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,13 +1,23 @@
 .row {
   @mixin clearfix;
 
-  &__4 {
-    float: left;
-    width: 33.33%;
+  @mixin atMedium {
+    &__medium-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__medium-8 {
+      float: right;
+      width: 66.66%;
+    }
   }
 
-  &__8 {
-    float: right;
-    width: 66.66%;
+  &--gutters > div {
+    padding-right: 65px;
+  }
+
+  &--gutters {
+    margin-right: -65px;
   }
 }
